# multi_search

./: LICENSE  example.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: template.yml
multi_search/: __init__.py  baidu_search.py  bing_search.py  duckduckgo_search.py  google_search.py  test.py  yahoo_search.py
